<resources>
    <string name="app_name">ProjectFoodMapping</string>
    <string name="add_food_input">Add food here</string>
    <string name="button_add">Add</string>
    <string name="restaurant_name">RestaurantName</string>
    <string name="add_food_title">Adding:</string>
    <string name="food_rating_1_text">1</string>
    <string name="food_rating_text_2">2</string>
    <string name="food_rating_text_3">3</string>
    <string name="food_rating_text_4">4</string>
    <string name="food_rating_text_5">5</string>
    <string name="rating_lable">Rating:</string>
    <string name="food_name">FoodNameMissing</string>
    <string name="time_label">Timestamp:</string>
    <string name="time_value">TimeHere</string>
    <string name="comment_label">Comment:</string>
    <string name="price_label">Price:</string>
    <string name="price_input_hint">Add price</string>
    <string name="food_comment_hint">Add comment</string>
    <string name="type_label">Type:</string>
    <string name="type_input_hint">Add type</string>
    <string name="save_button_text">Save</string>
    <string name="add_restaurant_hint">Add restaurant name</string>
    <string name="restaurant_name_value">RestaurantNameMissing</string>
    <string name="restaurant_country_label">Country:</string>
    <string name="restaurant_city_label">City:</string>
    <string name="restaurant_address_label">Address:</string>
    <string name="restaurant_country_hint">Add country</string>
    <string name="restaurant_city_hint">Add city</string>
    <string name="restaurant_address_hint">Add address</string>
    <string name="add_comma_to_string">%1$s,</string>
    <string name="button_go">Go</string>
    <string name="search_restaurant_input_hint">Search for restaurant</string>
    <string name="food_type_filter">Filter food types</string>
    <string name="add_food_type_hint">Add food type</string>
    <string name="button_text_pick">Pick</string>
</resources>
